--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@ body {
     border: 4px solid #fff;
     padding: 5px;
     cursor: pointer;
+    align-self: center;
 }
 
 .dots > div {
  width: 50px;
  height: 5px;
- background-color: #fff;
+ background-color: rgb(255, 255, 255);
  margin-block: 10px;
  border-radius: 5px;
 
@@ -36,10 +37,20 @@ body {
 
 .nav_lists {
     background: rgba(0, 0, 0, 0.6);
+    overflow: hidden;
+    height: 0;
+    transition: all 500ms ease;
+    
 }
 
-.nav_lists li {
+.navbar_collapse {
+    height: 260px;
+}
+
+.nav_lists a {
     list-style-type: none;
+    text-decoration: none;
+    display: block;
     padding: 1rem;
     font-size: 1.8rem;
     text-transform: capitalize;
@@ -50,10 +61,27 @@ body {
 
 }
 
-.nav_lists li:hover {
-    padding-left: 1.8rem;
+.nav_lists a:hover {
+    padding-left: 2rem;
+    background: #fff;
+    color: #333;
 }
 
-.nav_lists li i {
-    padding-right: 0.5rem;
+
+header {
+    min-height: calc(100vh - 139.41px);
+    background: url(./images/image.jpg)center/cover no-repeat;
+    width: 100%;
+}
+
+.fa-html5 {
+    color: #e34c26;
+}
+
+.fa-css3-alt {
+    color: 	RGB(41, 101, 241);
+}
+
+.fa-js {
+    color: 	RGB(240, 219, 79);
 }
